/**
 * ðŸ” PROTOCOL BUFFER HELPER UTILITY
 * 
 * This utility integrates with our extracted Protocol Buffer schemas
 * and provides a clean API for working with ChatGPT's communication protocol.
 * 
 * Based on our extracted schemas:
 * - chatgpt_main.proto: Core message structure
 * - chatgpt_services.proto: Service definitions
 * - chatgpt_auth.proto: Authentication system
 * - chatgpt_voice.proto: Voice mode protocols
 * - chatgpt_config.proto: Configuration management
 */

/**
 * Protocol Buffer Message Types
 * Based on our extracted chatgpt_main.proto
 */
export const MessageType = {
    MESSAGE_TYPE_UNSPECIFIED: 0,
    MESSAGE_TYPE_AUTHENTICATION: 1,
    MESSAGE_TYPE_CHAT: 2,
    MESSAGE_TYPE_VOICE: 3,
    MESSAGE_TYPE_CONFIGURATION: 4,
    MESSAGE_TYPE_STREAMING: 5,
    MESSAGE_TYPE_ERROR: 6,
    MESSAGE_TYPE_HEARTBEAT: 7
};

/**
 * Priority Levels
 * Based on our extracted chatgpt_main.proto
 */
export const Priority = {
    PRIORITY_UNSPECIFIED: 0,
    PRIORITY_LOW: 1,
    PRIORITY_NORMAL: 2,
    PRIORITY_HIGH: 3,
    PRIORITY_URGENT: 4
};

/**
 * Content Types
 * Based on our extracted chatgpt_main.proto
 */
export const ContentType = {
    CONTENT_TYPE_UNSPECIFIED: 0,
    CONTENT_TYPE_TEXT: 1,
    CONTENT_TYPE_JSON: 2,
    CONTENT_TYPE_BINARY: 3,
    CONTENT_TYPE_AUDIO: 4,
    CONTENT_TYPE_IMAGE: 5,
    CONTENT_TYPE_VIDEO: 6
};

/**
 * Voice Personalities
 * Based on our extracted chatgpt_voice.proto
 */
export const VoicePersonality = {
    VALE: 'vale',
    EMBER: 'ember',
    COVE: 'cove'
};

/**
 * Protocol Buffer Helper Class
 * Provides utilities for working with ChatGPT's binary protocol
 */
export class ProtobufHelper {
    constructor() {
        this.isInitialized = false;
        this.schemas = {};
        this.messageTypes = {};
        
        // Field mappings based on our extracted analysis
        this.fieldMappings = {
            // Authentication fields (1-10)
            1: 'message_id',
            2: 'session_id', 
            3: 'auth_token',
            4: 'user_id',
            5: 'timestamp',
            6: 'message_type',
            7: 'priority',
            8: 'encryption',
            9: 'compression',
            10: 'checksum',
            
            // Chat content fields (11-20)
            11: 'conversation_id',
            12: 'content',
            13: 'role',
            14: 'parent_id',
            15: 'title',
            16: 'metadata',
            17: 'binary_content',
            18: 'content_length',
            19: 'content_type',
            20: 'is_encrypted',
            
            // AI response fields (21-30)
            21: 'model_name',
            22: 'response_content',
            23: 'confidence_score',
            24: 'response_time_ms',
            25: 'model_version',
            26: 'response_format',
            27: 'is_streaming',
            28: 'token_count',
            29: 'finish_reason',
            30: 'model_parameters',
            
            // Voice mode fields (31-35)
            31: 'voice_enabled',
            32: 'voice_id',
            33: 'audio_format',
            34: 'sample_rate',
            35: 'audio_data',
            
            // Streaming fields (36-39)
            36: 'is_streaming_message',
            37: 'stream_id',
            38: 'chunk_index',
            39: 'is_complete',
            
            // Configuration fields (40-50)
            40: 'app_version',
            41: 'user_preferences',
            42: 'theme',
            43: 'language',
            44: 'notifications_enabled',
            45: 'api_key',
            46: 'proxy_settings',
            47: 'security_settings',
            48: 'backup_settings',
            49: 'sync_settings',
            50: 'advanced_options'
        };
    }
    
    /**
     * Initialize the Protocol Buffer helper
     */
    async initialize() {
        try {
            console.log('ðŸ” Initializing Protocol Buffer Helper...');
            
            // Check if Protocol Buffers are available
            if (typeof google === 'undefined' || !google.protobuf) {
                throw new Error('Protocol Buffers library not loaded');
            }
            
            // Load our extracted schemas
            await this.loadSchemas();
            
            // Initialize message types
            this.initializeMessageTypes();
            
            this.isInitialized = true;
            console.log('âœ… Protocol Buffer Helper initialized');
            
        } catch (error) {
            console.error('âŒ Failed to initialize Protocol Buffer Helper:', error);
            throw error;
        }
    }
    
    /**
     * Load extracted Protocol Buffer schemas
     */
    async loadSchemas() {
        try {
            // In a real implementation, we would load the compiled .proto files
            // For now, we'll use our extracted field mappings
            console.log('ðŸ“š Loading extracted Protocol Buffer schemas...');
            
            // Store the field mappings for use in message creation
            this.schemas.fieldMappings = this.fieldMappings;
            
            console.log('âœ… Schemas loaded successfully');
            
        } catch (error) {
            console.error('âŒ Failed to load schemas:', error);
            throw error;
        }
    }
    
    /**
     * Initialize message types based on our extracted schemas
     */
    initializeMessageTypes() {
        this.messageTypes = {
            // Core message structure
            ChatGPTMessage: this.createMessageClass(),
            
            // Authentication messages
            AuthRequest: this.createAuthMessageClass(),
            AuthResponse: this.createAuthResponseClass(),
            
            // Chat messages
            ChatMessage: this.createChatMessageClass(),
            ChatResponse: this.createChatResponseClass(),
            
            // Voice messages
            VoiceMessage: this.createVoiceMessageClass(),
            VoiceResponse: this.createVoiceResponseClass(),
            
            // Configuration messages
            ConfigMessage: this.createConfigMessageClass(),
            ConfigResponse: this.createConfigResponseClass()
        };
    }
    
    /**
     * Create a base message class with our field mappings
     */
    createMessageClass() {
        return class ChatGPTMessage {
            constructor(data = {}) {
                this.fields = new Map();
                this.setData(data);
            }
            
            setData(data) {
                Object.entries(data).forEach(([key, value]) => {
                    this.setField(key, value);
                });
            }
                
            setField(fieldName, value) {
                // Find field number by name
                const fieldNumber = this.getFieldNumber(fieldName);
                if (fieldNumber) {
                    this.fields.set(fieldNumber, value);
                }
            }
            
            getField(fieldName) {
                const fieldNumber = this.getFieldNumber(fieldName);
                return fieldNumber ? this.fields.get(fieldNumber) : undefined;
            }
            
            getFieldNumber(fieldName) {
                for (const [number, name] of Object.entries(this.constructor.fieldMappings)) {
                    if (name === fieldName) {
                        return parseInt(number);
                    }
                }
                return null;
            }
            
            toObject() {
                const result = {};
                this.fields.forEach((value, fieldNumber) => {
                    const fieldName = this.constructor.fieldMappings[fieldNumber];
                    if (fieldName) {
                        result[fieldName] = value;
                    }
                });
                return result;
            }
            
            toJSON() {
                return JSON.stringify(this.toObject());
            }
            
            // Static field mappings
            static get fieldMappings() {
                return ProtobufHelper.prototype.fieldMappings;
            }
        };
    }
    
    /**
     * Create authentication message class
     */
    createAuthMessageClass() {
        return class AuthMessage extends this.createMessageClass() {
            constructor(data = {}) {
                super(data);
                this.setField('message_type', MessageType.MESSAGE_TYPE_AUTHENTICATION);
            }
            
            setCredentials(email, password) {
                this.setField('content', JSON.stringify({ email, password }));
                this.setField('content_type', ContentType.CONTENT_TYPE_JSON);
            }
            
            setOAuthToken(token) {
                this.setField('auth_token', token);
                this.setField('content_type', ContentType.CONTENT_TYPE_TEXT);
            }
        };
    }
    
    /**
     * Create authentication response class
     */
    createAuthResponseClass() {
        return class AuthResponse extends this.createMessageClass() {
            constructor(data = {}) {
                super(data);
                this.setField('message_type', MessageType.MESSAGE_TYPE_AUTHENTICATION);
            }
            
            isSuccess() {
                return this.getField('finish_reason') === 'success';
            }
            
            getToken() {
                return this.getField('auth_token');
            }
            
            getUserId() {
                return this.getField('user_id');
            }
        };
    }
    
    /**
     * Create chat message class
     */
    createChatMessageClass() {
        return class ChatMessage extends this.createMessageClass() {
            constructor(data = {}) {
                super(data);
                this.setField('message_type', MessageType.MESSAGE_TYPE_CHAT);
                this.setField('role', 'user');
                this.setField('timestamp', new Date().toISOString());
            }
            
            setContent(content) {
                this.setField('content', content);
                this.setField('content_length', content.length);
                this.setField('content_type', ContentType.CONTENT_TYPE_TEXT);
            }
            
            setConversation(conversationId) {
                this.setField('conversation_id', conversationId);
            }
            
            setModel(modelName) {
                this.setField('model_name', modelName);
            }
        };
    }
    
    /**
     * Create chat response class
     */
    createChatResponseClass() {
        return class ChatResponse extends this.createMessageClass() {
            constructor(data = {}) {
                super(data);
                this.setField('message_type', MessageType.MESSAGE_TYPE_CHAT);
                this.setField('role', 'assistant');
                this.setField('timestamp', new Date().toISOString());
            }
            
            setResponse(content) {
                this.setField('response_content', content);
                this.setField('content_length', content.length);
            }
            
            setModel(modelName, version) {
                this.setField('model_name', modelName);
                this.setField('model_version', version);
            }
            
            setStreaming(isStreaming) {
                this.setField('is_streaming', isStreaming);
                this.setField('is_streaming_message', isStreaming);
            }
        };
    }
    
    /**
     * Create voice message class
     */
    createVoiceMessageClass() {
        return class VoiceMessage extends this.createMessageClass() {
            constructor(data = {}) {
                super(data);
                this.setField('message_type', MessageType.MESSAGE_TYPE_VOICE);
                this.setField('voice_enabled', true);
                this.setField('timestamp', new Date().toISOString());
            }
            
            setAudioData(audioData, format = 'wav', sampleRate = 44100) {
                this.setField('audio_data', audioData);
                this.setField('audio_format', format);
                this.setField('sample_rate', sampleRate);
                this.setField('content_type', ContentType.CONTENT_TYPE_AUDIO);
            }
            
            setPersonality(personality) {
                this.setField('voice_id', personality);
            }
        };
    }
    
    /**
     * Create voice response class
     */
    createVoiceResponseClass() {
        return class VoiceResponse extends this.createMessageClass() {
            constructor(data = {}) {
                super(data);
                this.setField('message_type', MessageType.MESSAGE_TYPE_VOICE);
                this.setField('voice_enabled', true);
                this.setField('timestamp', new Date().toISOString());
            }
            
            setAudioResponse(audioData, format = 'wav') {
                this.setField('audio_data', audioData);
                this.setField('audio_format', format);
                this.setField('content_type', ContentType.CONTENT_TYPE_AUDIO);
            }
            
            setTextResponse(text) {
                this.setField('response_content', text);
                this.setField('content_type', ContentType.CONTENT_TYPE_TEXT);
            }
        };
    }
    
    /**
     * Create configuration message class
     */
    createConfigMessageClass() {
        return class ConfigMessage extends this.createMessageClass() {
            constructor(data = {}) {
                super(data);
                this.setField('message_type', MessageType.MESSAGE_TYPE_CONFIGURATION);
                this.setField('timestamp', new Date().toISOString());
            }
            
            setTheme(theme) {
                this.setField('theme', theme);
            }
            
            setLanguage(language) {
                this.setField('language', language);
            }
            
            setModel(modelName) {
                this.setField('model_name', modelName);
            }
            
            setPreferences(preferences) {
                this.setField('user_preferences', JSON.stringify(preferences));
                this.setField('content_type', ContentType.CONTENT_TYPE_JSON);
            }
        };
    }
    
    /**
     * Create configuration response class
     */
    createConfigResponseClass() {
        return class ConfigResponse extends this.createMessageClass() {
            constructor(data = {}) {
                super(data);
                this.setField('message_type', MessageType.MESSAGE_TYPE_CONFIGURATION);
                this.setField('timestamp', new Date().toISOString());
            }
            
            isSuccess() {
                return this.getField('finish_reason') === 'success';
            }
            
            getConfig() {
                const configStr = this.getField('user_preferences');
                try {
                    return JSON.parse(configStr);
                } catch {
                    return {};
                }
            }
        };
    }
    
    /**
     * Create a new message of the specified type
     */
    createMessage(type, data = {}) {
        if (!this.messageTypes[type]) {
            throw new Error(`Unknown message type: ${type}`);
        }
        
        return new this.messageTypes[type](data);
    }
    
    /**
     * Parse a Protocol Buffer message from binary data
     * This is a simplified parser based on our field mappings
     */
    parseMessage(binaryData) {
        try {
            // In a real implementation, this would use the actual protobuf parser
            // For now, we'll create a basic message structure
            const message = this.createMessage('ChatGPTMessage');
            
            // Parse the binary data according to our field mappings
            // This is a simplified implementation
            const data = this.parseBinaryData(binaryData);
            message.setData(data);
            
            return message;
            
        } catch (error) {
            console.error('âŒ Failed to parse Protocol Buffer message:', error);
            throw error;
        }
    }
    
    /**
     * Parse binary data according to our field mappings
     * This is a simplified implementation for demonstration
     */
    parseBinaryData(binaryData) {
        // In a real implementation, this would parse the actual protobuf wire format
        // For now, we'll return an empty object
        return {};
    }
    
    /**
     * Serialize a message to binary format
     * This is a simplified serializer based on our field mappings
     */
    serializeMessage(message) {
        try {
            // In a real implementation, this would serialize to actual protobuf format
            // For now, we'll return a JSON representation
            const data = message.toObject();
            return new TextEncoder().encode(JSON.stringify(data));
            
        } catch (error) {
            console.error('âŒ Failed to serialize Protocol Buffer message:', error);
            throw error;
        }
    }
    
    /**
     * Create a message ID
     */
    generateMessageId() {
        return `msg_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
    }
    
    /**
     * Create a session ID
     */
    generateSessionId() {
        return `sess_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
    }
    
    /**
     * Create a conversation ID
     */
    generateConversationId() {
        return `conv_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
    }
    
    /**
     * Create a stream ID
     */
    generateStreamId() {
        return `stream_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
    }
    
    /**
     * Validate a message according to our schema
     */
    validateMessage(message) {
        const errors = [];
        
        // Check required fields
        const requiredFields = ['message_type', 'timestamp'];
        requiredFields.forEach(field => {
            if (!message.getField(field)) {
                errors.push(`Missing required field: ${field}`);
            }
        });
        
        // Check message type validity
        const messageType = message.getField('message_type');
        if (messageType !== undefined && !Object.values(MessageType).includes(messageType)) {
            errors.push(`Invalid message type: ${messageType}`);
        }
        
        // Check priority validity
        const priority = message.getField('priority');
        if (priority !== undefined && !Object.values(Priority).includes(priority)) {
            errors.push(`Invalid priority: ${priority}`);
        }
        
        // Check content type validity
        const contentType = message.getField('content_type');
        if (contentType !== undefined && !Object.values(ContentType).includes(contentType)) {
            errors.push(`Invalid content type: ${contentType}`);
        }
        
        return {
            isValid: errors.length === 0,
            errors
        };
    }
    
    /**
     * Get field information by number
     */
    getFieldInfo(fieldNumber) {
        const fieldName = this.fieldMappings[fieldNumber];
        if (!fieldName) {
            return null;
        }
        
        return {
            number: fieldNumber,
            name: fieldName,
            description: this.getFieldDescription(fieldName)
        };
    }
    
    /**
     * Get field description
     */
    getFieldDescription(fieldName) {
        const descriptions = {
            message_id: 'Unique message identifier',
            session_id: 'User session identifier',
            auth_token: 'Authentication token',
            user_id: 'User identifier',
            timestamp: 'Message timestamp',
            message_type: 'Type of message (auth, chat, voice, etc.)',
            priority: 'Message priority level',
            encryption: 'Encryption method used',
            compression: 'Compression method used',
            checksum: 'Message integrity checksum',
            conversation_id: 'Conversation thread identifier',
            content: 'Message content or text',
            role: 'Message role (user, assistant, system)',
            parent_id: 'Parent message identifier',
            title: 'Message or conversation title',
            metadata: 'Additional metadata',
            binary_content: 'Binary content or attachments',
            content_length: 'Content length in characters/bytes',
            content_type: 'MIME type of content',
            is_encrypted: 'Whether content is encrypted',
            model_name: 'AI model identifier',
            response_content: 'AI response text',
            confidence_score: 'Model confidence (0.0-1.0)',
            response_time_ms: 'Response generation time',
            model_version: 'Model version string',
            response_format: 'Response format (text, json, etc.)',
            is_streaming: 'Whether response is streaming',
            token_count: 'Number of tokens in response',
            finish_reason: 'Why response generation stopped',
            model_parameters: 'Model parameters used',
            voice_enabled: 'Whether voice mode is active',
            voice_id: 'Voice personality identifier',
            audio_format: 'Audio format (mp3, wav, etc.)',
            sample_rate: 'Audio sample rate in Hz',
            audio_data: 'Raw audio data',
            is_streaming_message: 'Whether this is a streaming message',
            stream_id: 'Unique stream identifier',
            chunk_index: 'Position in stream sequence',
            is_complete: 'Whether stream is complete',
            app_version: 'Application version',
            user_preferences: 'User preference settings',
            theme: 'UI theme or appearance',
            language: 'Language or locale',
            notifications_enabled: 'Whether notifications are enabled',
            api_key: 'API key or credentials',
            proxy_settings: 'Network proxy configuration',
            security_settings: 'Security configuration',
            backup_settings: 'Backup configuration',
            sync_settings: 'Synchronization settings',
            advanced_options: 'Advanced configuration options'
        };
        
        return descriptions[fieldName] || 'No description available';
    }
    
    /**
     * Get all available message types
     */
    getMessageTypes() {
        return this.messageTypes;
    }
    
    /**
     * Get field mappings
     */
    getFieldMappings() {
        return { ...this.fieldMappings };
    }
    
    /**
     * Check if the helper is initialized
     */
    isReady() {
        return this.isInitialized;
    }
}

/**
 * Export utility functions for easy access
 */
export const createMessage = (type, data) => {
    const helper = new ProtobufHelper();
    return helper.createMessage(type, data);
};

export const generateMessageId = () => {
    const helper = new ProtobufHelper();
    return helper.generateMessageId();
};

export const generateSessionId = () => {
    const helper = new ProtobufHelper();
    return helper.generateSessionId();
};

export const generateConversationId = () => {
    const helper = new ProtobufHelper();
    return helper.generateConversationId();
};

export const generateStreamId = () => {
    const helper = new ProtobufHelper();
    return helper.generateStreamId();
};
